[flake8]
exclude =
    .git,
    __pycache__,
    env/*,
select = C,E,F,W,B,B950
;ignore = C812,C816,E203,E501,E701,E704,F811,F821,W503
max-complexity = 12

[isort]
line_length = 88
known_future_library = future,__future__
known_first_party = edgeconnect,tests
indent = '    '
multi_line_output = 3
include_trailing_comma = True
combine_as_imports=1
profile = black

[mypy]
strict = true
python_version = 3.12
ignore_errors = false

[coverage:run]
source = src
branch = true
omit =
    */*.pyx
    */*.pxd
    */*.pyi

[coverage:report]
# Regexes for lines to exclude from consideration
exclude_lines =
    pragma: nocover
    raise NotImplementedError
    def __repr__
    def __str__
show_missing = true
fail_under = 100

[metadata]
description-file=README.md

[tool:pytest]
markers = performance
